--- a/main.html
+++ b/main.html
@@ -209,7 +209,7 @@
         <div class="item" style="background-image: url(pictures/Capture64.jpg);">
             <div class="content"></div>
         </div>
-        <div class="item" style="background-image: url(pictures/Capture65.JPG);">
+        <div class="item" style="background-image: url(pictures/Capture65.jpg);">
             <div class="content"></div>
         </div>
         <div class="item" style="background-image: url(pictures/Capture66.jpg);">
@@ -221,10 +221,10 @@
         <div class="item" style="background-image: url(pictures/Capture68.jpg);">
             <div class="content"></div>
         </div>
-        <div class="item" style="background-image: url(pictures/Capture69.JPG);">
+        <div class="item" style="background-image: url(pictures/Capture69.jpg);">
             <div class="content"></div>
         </div>
-        <div class="item" style="background-image: url(pictures/Capture70.JPG);">
+        <div class="item" style="background-image: url(pictures/Capture70.jpg);">
             <div class="content"></div>
         </div>
         <div class="item" style="background-image: url(pictures/Capture71.jpg);">
@@ -242,4 +242,5 @@
 
 <script src="app.js"></script>
 </body>
+
 </html>
